fix: on mobile, the logo now appears inside the white container not outisde

--- a/src/main/resources/static/css/team-profile.css
+++ b/src/main/resources/static/css/team-profile.css
@@ -478,13 +478,6 @@
     float: left;
 }
 
-@media (max-width: 768px) {
-    .float-child {
-        width: 100;
-        float: none;
-    }
-}
-
 .club-link {
     display: flex;
     justify-content: center;
@@ -510,4 +503,30 @@
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 15ch;
+}
+
+@media (max-width: 500px) {
+    .float-child {
+        width: 100;
+        float: none;
+    }
+    
+    .club-link {
+        display: flex;
+        align-items: center;
+        color: black;
+        text-decoration: none;
+        justify-content: flex-start;
+    }
+
+    .logo {
+        width: 60px;
+        margin: 0 auto 10px; 
+    }
+
+    .logo img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
 }
